Add styles for additional butons, change font to monotype

--- a/css/style.css
+++ b/css/style.css
@@ -13,20 +13,24 @@ body {
 
 .container {
   margin: 10px auto;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.6);
-  height: 60vh;
-  max-height: 300px;
-  width: 70vw;
+  min-height: 200px;
+  width: 80vw;
   max-width: 400px;
   border-radius: 10px;
 }
 
 .controls {
-  margin-top: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-around;
+  height: 100px;
 }
 
 a {
@@ -34,11 +38,10 @@ a {
 }
 
 .button {
-  padding: 10px 20px;
+  padding: 5px 20px;
   color: #ffffff;
   border-radius: 10px;
-  font-size: 24px;
-  margin: 15px;
+  font-size: 18px;
 }
 
 #start {
@@ -49,14 +52,38 @@ a {
   background-color: #ff4141;
 }
 
+#reset {
+  background-color: #41e9ff;
+}
+
+#reset-results {
+  background-color: #2fafc0;
+}
+
+#add-result {
+  background-color: #888888;
+}
+
 .stopwatch {
-  margin: 20px;
-  width: 300px;
-  min-height: 100px;
+  margin: 10px;
+  width: 100%;
+  padding: 5px;
   text-align: center;
   background-color: white;
   border-radius: 10px;
   font-size: 48px;
+  font-family: "Nova Mono", monospace;
+}
+
+.results {
+  font-size: 18px;
+  padding: 10px 20px;
+  background-color: #888888;
+  color: black;
+  width: 100%;
+  text-align: left;
+  min-height: 48px;
+  border-radius: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
