Add the add result method, change formating to monospace

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,11 @@ a {
   text-align: left;
   min-height: 48px;
   border-radius: 10px;
+  font-family: "Nova Mono", monospace;
+}
+
+ul {
+  list-style-type: none;
 }
 
 /*# sourceMappingURL=style.css.map */
