--- a/sass/style.scss
+++ b/sass/style.scss
@@ -77,4 +77,8 @@ a {
   text-align: left;
   min-height: 48px;
   border-radius: 10px;
+  font-family: "Nova Mono", monospace;
+}
+ul {
+  list-style-type: none;
 }
